test/bad/functions/call09.px

func f(Int a: 5, Int b: 10) def
    return

f(a=3, 7)
